--- a/GTI_WebApi/GTI_WebApi.csproj
+++ b/GTI_WebApi/GTI_WebApi.csproj
@@ -199,15 +199,23 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImovelController.cs" />
     <Compile Include="Models\atividade.cs" />
+    <Compile Include="Models\atividadeiss.cs" />
     <Compile Include="Models\cep.cs" />
+    <Compile Include="Models\cnae.cs" />
+    <Compile Include="Models\Cnaesubclasse.cs" />
+    <Compile Include="Models\cnae_aliquota.cs" />
     <Compile Include="Models\condominio.cs" />
     <Compile Include="Models\horario_funcionamento.cs" />
     <Compile Include="Models\mobiliario.cs" />
+    <Compile Include="Models\mobiliarioatividadeiss.cs" />
+    <Compile Include="Models\mobiliariocnae.cs" />
     <Compile Include="Models\mobiliarioevento.cs" />
     <Compile Include="Models\mobiliarioplaca.cs" />
     <Compile Include="Models\mobiliarioproprietario.cs" />
+    <Compile Include="Models\mobiliariovs.cs" />
     <Compile Include="Models\pais.cs" />
     <Compile Include="Models\periodomei.cs" />
+    <Compile Include="Models\tabelaiss.cs" />
     <Compile Include="Repository\CidadaoRepository.cs" />
     <Compile Include="Repository\EmpresaRepository.cs" />
     <Compile Include="Repository\EnderecoRepository.cs" />
